--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </head>
 <body>
     <nav id="desktop-nav">
@@ -150,8 +151,8 @@
                     </div>
                     <h2 class="experience-sub-title project-btn">Quiz Abb App</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">Github</button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">Live Demo</button>
+                        <!-- <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">Github</button> -->
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://apps.apple.com/us/app/abb-quiz-app/id1538281636'">Live Demo</button>
                     </div>
                 </div>
                 <div class="details-container color-container">
@@ -160,7 +161,7 @@
                     </div>
                     <h2 class="experience-sub-title project-btn">OysterVPN</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">Github</button>
+                        <!-- <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">Github</button> -->
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">Live Demo</button>
                     </div>
                 </div>
@@ -170,8 +171,8 @@
                     </div>
                     <h2 class="experience-sub-title project-btn">Sanatkar</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">Github</button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">Live Demo</button>
+                        <!-- <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">Github</button> -->
+                        <!-- <button class="btn btn-color-2 project-btn" onclick="location.href='https://apps.apple.com/ca/app/oystervpn-secure-and-fast-vpn/id1639558080'">Live Demo</button> -->
                     </div>
                 </div>
             </div>
@@ -185,11 +186,14 @@
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
                 <img src="./assets/email.png" alt="Email Icon" class="icon contact-icon">
-                <p><a href="mailto:asami.sultan@hotmail.com">asami.sultan@hotmail.com</a></p>
+                <p><a href="mailto:abdulsami923@gmail.com">abdulsami923@gmail.com</a></p>
             </div>
             <div class="contact-info-container">
                 <img src="./assets/linkedin.png" alt="linkedin Icon" class="icon contact-icon">
                 <p><a href="https://www.linkedin.com/in/abdul-sami-sultan-452a9a1ba/">Linkedin</a></p>
+                <!-- <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="HORIZONTAL" data-vanity="abdul-sami-sultan-452a9a1ba" data-version="v1">
+                    <a class="badge-base__link LI-simple-link" href="https://pk.linkedin.com/in/abdul-sami-sultan-452a9a1ba?trk=profile-badge">Abdul Sami Sultan</a>
+                </div> -->
             </div>
         </div>
     </section>
