New Project added

--- a/index.html
+++ b/index.html
@@ -175,6 +175,18 @@
                         <!-- <button class="btn btn-color-2 project-btn" onclick="location.href='https://apps.apple.com/ca/app/oystervpn-secure-and-fast-vpn/id1639558080'">Live Demo</button> -->
                     </div>
                 </div>
+
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="./assets/project5.png" alt="Project 1" class="project-img">
+                    </div>
+                    <h2 class="experience-sub-title project-btn">Social Media App - ReactNative</h2>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/AbdulSami-Sultan/Social-Media-App'">Github</button>
+                        <!-- <button class="btn btn-color-2 project-btn" onclick="location.href='https://apps.apple.com/us/app/abb-quiz-app/id1538281636'">Live Demo</button> -->
+                    </div>
+                </div>
+
             </div>
             
         </di>
